# Tender-Engineer

./: README.md  pyproject.toml  streamlit_app.py  uv_requirements.txt
src/tender_engineer_crew/: crew.py  init_mongodb.py  main.py
src/tender_engineer_crew/config/: agents.yaml  tasks.yaml
src/tender_engineer_crew/tools/: custom_tool.py  mongodb_utils.py  s3_utils.py
