[project]
name = "tender_engineer_crew"
version = "0.1.0"
description = "Tender-Engineer-Crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "boto3>=1.39.14",
    "crewai[tools]>=0.140.0,<1.0.0",
    "docx2txt>=0.9",
    "easyocr>=1.7.2",
    "pdf2image>=1.17.0",
    "pymongo>=4.13.2",
    "sentence-transformers>=5.0.0",
]

[project.scripts]
tender_engineer_crew = "tender_engineer_crew.main:run"
run_crew = "tender_engineer_crew.main:run"
train = "tender_engineer_crew.main:train"
replay = "tender_engineer_crew.main:replay"
test = "tender_engineer_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
